--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,32 @@
     padding: 5px;
     text-decoration: none;
     color: black;
+    font-size: 25px;
+    margin-top: 10px;
 }
 /* css properties for bottom border */
 .border-bottom-style{
     border-bottom: 1px solid black;
     width: fit-content;
+}
+
+/* box shadow */
+.box-shadow{
+	-webkit-box-shadow: 0 1px 1px rgba(69, 189, 222, 0.8);
+	box-shadow: 0 1px 1px rgba(69, 189, 222, 0.8);
+	-webkit-transition: all .2s ease-out;
+	-moz-transition: all .2s ease-out;
+	-ms-transition: all .2s ease-out;
+	-o-transition: all .2s ease-out;
+	transition: all .2s ease-out;
+}
+
+.box-shadow:hover{
+	-webkit-box-shadow: 0 10px 20px rgba(69, 189, 222, 0.8);
+	box-shadow: 0 20px 20px rgba(69, 189, 222, 0.8);
+	-webkit-transform: translateY(-5px);
+	-moz-transform: translateY(-5px);
+	-ms-transform: translateY(-5px);
+	-o-transform: translateY(-5px);
+	transform: translateY(-5px);
 }
